--- a/src/DotNetdit/DotNetdit.csproj
+++ b/src/DotNetdit/DotNetdit.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,9 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\IJTokenFactory.cs" />
+    <Compile Include="Factories\JTokenFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ExceptionUtils.cs" />
     <Compile Include="Utilities\StringUtils.cs" />
+    <Compile Include="Web\IWebAgent.cs" />
+    <Compile Include="Web\WebAgent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
